--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <title>INDEX</title>
+        <link rel="icon" type="image/x-icon" href="img/SMASHED BABIES LOGO 1.png" />
+        <title>Smashed Babies</title>
     </head>
     <body class="d-flex flex-column justify-content-between min-vh-100">
-        <nav class="navbar navbar-expand-sm bg-warning">
+        <nav class="navbar navbar-expand-sm bg-danger">
             <div class="container-fluid">
                 <a class="navbar-brand text-light" href="#">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,10 +18,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="/new.html">New Pizza</a>
+                        <a class="nav-link text-light" href="/new.html">New Burger</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="/pizzas.html">Pizzas</a>
+                        <a class="nav-link text-light" href="/burgers.html">Burgers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="/register.html">Register</a>
@@ -36,13 +37,11 @@
             </div>
         </nav>
         <main class="d-flex flex-column justify-content-center align-items-center flex-grow-1">
-            <h1>RENDERIZAR INDEX</h1>
-            <h3>LA TIENE QUE VER VER TODOS</h3>
-            <h5>INCLUIR LO QUE QUIERAN</h5>
+            <h1>SMASHED BABIES</h1>
+            <hr>
+            <a class="navbar-brand" href="#"><img src="SMASHED BABIES LOGO 3.png" alt="Logo" width="500" /></a>
         </main>
-        <footer class="bg-warning p-2 text-center">E-COMMERCE</footer>
+        <footer class="bg-danger p-2 text-center">E-COMMERCE</footer>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <!-- agregar script para renderizado dinámico de barra de navegación con protecciones -->
-    <!-- agregar script necesario (opcional según funcionalidades que muestren en index) -->
 </html>
