--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
         <title>LOG IN</title>
     </head>
     <body class="d-flex flex-column justify-content-between min-vh-100">
-        <nav class="navbar navbar-expand-sm bg-warning">
+        <nav class="navbar navbar-expand-sm bg-danger">
             <div class="container-fluid">
                 <a class="navbar-brand text-light" href="/index.html">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,10 +17,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="/new.html">New Pizza</a>
+                        <a class="nav-link text-light" href="/new.html">New Burger</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="/pizzas.html">Pizzas</a>
+                        <a class="nav-link text-light" href="/burgers.html">Burgers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="/register.html">Register</a>
@@ -50,7 +50,7 @@
                 </div>
             </form>
         </main>
-        <footer class="bg-warning p-2 text-center">E-COMMERCE</footer>
+        <footer class="bg-danger p-2 text-center">E-COMMERCE</footer>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <!-- agregar script para renderizado dinámico de barra de navegación con protecciones -->
